--- a/packages/frontend/src/ChessBoard/style.css
+++ b/packages/frontend/src/ChessBoard/style.css
@@ -8,6 +8,9 @@
   width: var(--dom-size);
   height: var(--dom-size);
   padding: var(--block-size);
+  padding-top: 0;
+  padding-left: 0;
+  margin: 0 auto;
   grid-template-rows: repeat(12, 1fr);
   grid-template-columns: repeat(12, 1fr);
   gap: 0px;
@@ -111,11 +114,11 @@
 }
 
 .chessboard-container .chessboard-main .pieces > div.piece.black {
-  background-color: red;
+  background-color: var(--piece-color-black);
 }
 
 .chessboard-container .chessboard-main .pieces > div.piece.white {
-  background-color: blue;
+  background-color: var(--piece-color-white);
 }
 
 .chessboard-container .chessboard-main .pieces > div.piece.pointing {
