refactor(frontend): Tweak thoughts board style

--- a/packages/frontend/src/app.css
+++ b/packages/frontend/src/app.css
@@ -3,3 +3,9 @@ form.settings-radio-group {
   flex-direction: row;
   gap: 2em
 }
+
+div.thought-container pre code {
+  overflow-x: hidden;
+  text-overflow: clip;
+  white-space: break-spaces;
+}
