--- a/packages/frontend/src/ChessBoard/style.css
+++ b/packages/frontend/src/ChessBoard/style.css
@@ -54,40 +54,49 @@
   grid-row-start: 2;
 }
 
-.chessboard-container .chessboard-main .blocks {
-  display: flex;
-  width: var(--blocks-dom-size);
-  height: var(--blocks-dom-size);
-  flex-direction: column;
-  align-items: stretch;
-  flex-wrap: nowrap;
+.chessboard-container .chessboard-grid {
+  position: relative;
+  width: calc(var(--blocks-dom-size) + 1px);
+  height: calc(var(--blocks-dom-size) + 1px);
+  background:
+    repeating-linear-gradient(currentColor, currentColor 1px, transparent 1px, transparent var(--block-size)),
+    repeating-linear-gradient(90deg, currentColor, currentColor 1px, transparent 1px, transparent var(--block-size));
+  background-repeat: no-repeat;
+  background-size: 100% 100%, 100% 100%;
+  background-position: 0 0, 0 0;
 }
 
-.chessboard-container .chessboard-main .blocks .blocks-row {
-  display: flex;
-  width: var(--blocks-dom-size);
-  height: var(--block-size);
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: flex-start;
+.chessboard-container .chessboard-grid .star-point {
+  position: absolute;
+  width: calc(var(--block-size) / 4);
+  height: calc(var(--block-size) / 4);
+  background-color: currentColor;
+  transform: translate(-50%, -50%);
 }
 
-.chessboard-container .chessboard-main .blocks .block {
-  width: var(--block-size);
-  height: var(--block-size);
-  border: 1px solid currentColor;
-  border-top: unset;
-  border-right: unset;
-  box-sizing: border-box;
+.chessboard-container .chessboard-grid .star-point.top-left,
+.chessboard-container .chessboard-grid .star-point.top-right {
+  top: calc(var(--block-size) * 3);
 }
 
-.chessboard-container .chessboard-main .blocks .blocks-row:first-child .block {
-  border-top: 1px solid currentColor;
+.chessboard-container .chessboard-grid .star-point.bottom-left,
+.chessboard-container .chessboard-grid .star-point.bottom-right {
+  top: calc(var(--blocks-dom-size) - var(--block-size) * 3);
 }
 
-.chessboard-container .chessboard-main .blocks .block:last-child {
-  border-right: 1px solid currentColor;
+.chessboard-container .chessboard-grid .star-point.top-left,
+.chessboard-container .chessboard-grid .star-point.bottom-left {
+  left: calc(var(--block-size) * 3);
+}
+
+.chessboard-container .chessboard-grid .star-point.top-right,
+.chessboard-container .chessboard-grid .star-point.bottom-right {
+  left: calc(var(--blocks-dom-size) - var(--block-size) * 3);
+}
+
+.chessboard-container .chessboard-grid .star-point.center {
+  top: 50%;
+  left: 50%;
 }
 
 .chessboard-container .chessboard-main .pieces {
@@ -145,39 +154,6 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-}
-
-.chessboard-container .star-points .star-point {
-  position: absolute;
-  width: calc(var(--block-size) / 4);
-  height: calc(var(--block-size) / 4);
-  background-color: currentColor;
-  transform: translate(-50%, -50%);
-}
-
-.chessboard-container .star-points .star-point.top-left,
-.chessboard-container .star-points .star-point.top-right {
-  top: calc(var(--block-size) * 3);
-}
-
-.chessboard-container .star-points .star-point.bottom-left,
-.chessboard-container .star-points .star-point.bottom-right {
-  top: calc(var(--blocks-dom-size) - var(--block-size) * 3);
-}
-
-.chessboard-container .star-points .star-point.top-left,
-.chessboard-container .star-points .star-point.bottom-left {
-  left: calc(var(--block-size) * 3);
-}
-
-.chessboard-container .star-points .star-point.top-right,
-.chessboard-container .star-points .star-point.bottom-right {
-  left: calc(var(--blocks-dom-size) - var(--block-size) * 3);
-}
-
-.chessboard-container .star-points .star-point.center {
-  top: 50%;
-  left: 50%;
 }
 
 .chessboard-container::before {
